--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,16 @@
-<div class="sidebar">
-  <div class="logo-details">
-    <div class="logo">
-      BNYM Logo
-    </div>
-  </div>
-  <ul class="nav-links" id="nav-links">
-    <li *ngFor="let item of menuSidebar" #itemEl routerLinkActive="active">
-      <div *ngIf="item.sub_menu.length == 0" class="dropdown-title">
-        <a [routerLink]="[item.link]">
-          <!-- <i [class]="item.icon"></i> -->
-          <i class="material-icons">{{item.icon}}</i>
-          <span class="link_name">{{item.link_name}}</span>
-        </a>
-      </div>
-      <div *ngIf="item.sub_menu.length > 0" class="dropdown-title" (click)="showSubmenu(itemEl)">
-        <a>
-          <i class="material-icons">{{item.icon}}</i>
-          <span class="link_name">{{item.link_name}}</span>
-        </a>
-        <i class="material-icons">keyboard_arrow_down</i>
-      </div>
-      <ul class="sub-menu" [class.blank]="item.sub_menu.length == 0">
-        <li><a class="link_name">{{item.link_name}}</a></li>
-        <li *ngFor="let item_sub of item.sub_menu" routerLinkActive="active">
-          <a [routerLink]="[item_sub.link]">{{item_sub.link_name}}</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
-<section class="home-section">
-  <div class="home-header">
-    <div class="title ml-10">BNYM</div>
-  </div>
-  <div class="home-view">
-    <router-outlet></router-outlet>
-  </div>
-</section>
+<ng-container>
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav mode="side" opened [fixedInViewport]="options.value.fixed" [fixedTopGap]="options.value.top">
+      <app-sidenav [menuSidebar]="menuSidebar" (showSubmenuEvent)="showSubmenuEvent($event)"></app-sidenav>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar color="primary">
+        <button (click)="sidenav.toggle()" mat-icon-button aria-label="Menu Icon">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>BNYM Side Nav Project</span>
+      </mat-toolbar>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</ng-container>
