--- a/src/app/views/sidenav/sidenav.component.scss
+++ b/src/app/views/sidenav/sidenav.component.scss
@@ -6,24 +6,19 @@
   padding-left: 0px;
   overflow-x: hidden;
 }
-
 .sidebar .nav-links li {
   list-style: none;
 }
-
 .sidebar .nav-links > li {
   position: relative;
   width: fit-content;
 }
-
 .sidebar .nav-links li:hover {
   background: #055160;
 }
-
 .sidebar .nav-links li.active {
   background: teal;
 }
-
 .sidebar .nav-links .dropdown-title {
   width: 260px;
   overflow: hidden;
@@ -33,11 +28,6 @@
   justify-content: space-between;
   position: relative;
 }
-
-.sidebar.sidebar-close .nav-links .dropdown-title {
-  width: 60px;
-}
-
 .sidebar .nav-links li i {
   height: 50px;
   min-width: 60px;
@@ -48,50 +38,38 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
 .sidebar .nav-links li:hover i,
 .sidebar .nav-links li.active i {
   color: white;
 }
-
 .sidebar .nav-links li.showMenu i.arrow {
   transform: rotate(-180deg);
 }
-
 .sidebar .nav-links li a {
   display: flex;
   align-items: center;
   text-decoration: none;
   width: 100%;
 }
-
 .sidebar .nav-links li a .link_name {
   font-size: 16px;
   font-weight: 600;
   color: #055160;
   transition: all 0.4s ease;
 }
-
 .sidebar .nav-links li:hover a .link_name,
 .sidebar .nav-links li.active a .link_name {
   color: white;
 }
-
-.sidebar.sidebar-close .nav-links li a .link_name {
-  pointer-events: none;
-}
-
 .sidebar .nav-links li .sub-menu {
   padding: 6px 6px 14px 70px;
   background: white;
   display: none;
   transition: all 0.4s ease;
 }
-
 .sidebar .nav-links li.showMenu .sub-menu {
   display: block;
 }
-
 .sidebar .nav-links li .sub-menu a {
   color: #055160;
   font-size: 15px;
@@ -99,68 +77,20 @@
   white-space: nowrap;
   transition: all 0.3s ease;
 }
-
 .sidebar .nav-links li .sub-menu li {
   padding-left: 10px;
 }
-
 .sidebar .nav-links li .sub-menu li:hover a,
 .sidebar .nav-links li .sub-menu li.active a {
   color: white;
-}
-
-.sidebar.sidebar-close .nav-links li .sub-menu {
-  position: absolute;
-  left: 100%;
-  top: -10px;
-  margin-top: 0;
-  padding: 0;
-  border-radius: 0 6px 6px 0;
-  opacity: 0;
-  display: block;
-  pointer-events: none;
-  transition: 0s;
-  overflow: hidden;
-}
-
-.sidebar.sidebar-close .nav-links li .sub-menu li {
-  padding: 6px 15px;
-  width: 200px;
-}
-
-.sidebar.sidebar-close .nav-links li:hover .sub-menu {
-  top: 0;
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0.4s ease;
-}
-
-.sidebar .nav-links li .sub-menu .link_name {
+}.sidebar .nav-links li .sub-menu .link_name {
   display: none;
 }
-
-.sidebar.sidebar-close .nav-links li .sub-menu .link_name {
-  font-size: 16px;
-  font-weight: 600;
-  display: block;
-}
-
-.sidebar.sidebar-close .nav-links li .sub-menu li:first-child {
-  background: white;
-  pointer-events: none;
-}
-
-.sidebar.sidebar-close .nav-links li .sub-menu li:first-child:hover .link_name,
-.sidebar.sidebar-close .nav-links li .sub-menu li:first-child.active .link_name {
-  color: #055160;
-}
-
 .sidebar .nav-links li .sub-menu.blank {
   pointer-events: auto;
   opacity: 0;
   pointer-events: none;
 }
-
 .sidebar .nav-links li:hover .sub-menu.blank,
 .sidebar .nav-links li.active .sub-menu.blank {
   top: 50%;
