--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,43 @@
         </button>
         <span>BNYM Side Nav Project</span>
       </mat-toolbar>
-      <router-outlet></router-outlet>
+      <section scrollSpy [spiedTags]="['DIV']" (sectionChange)="onSectionChange($event)"
+        style="height: calc(100vh - 65px); overflow-y: auto;">
+        <div style="height: 600px;" id="account_information">
+          Account Information
+        </div>
+        <div style="height: 600px;" id="contact_information">
+          Contact Information
+        </div>
+        <div style="height: 600px;" id="general_information">
+          General Information
+        </div>
+        <div style="height: 600px;" id="personal_information">
+          Personal Information
+        </div>
+        <div style="height: 600px;" id="address_information">
+          Address Information
+        </div>
+        <div style="height: 600px;" id="employment_information">
+          Employment Information
+        </div>
+        <div style="height: 600px;" id="customer_due_diligence">
+          Customer Due Diligence
+        </div>
+        <div style="height: 600px;" id="id_information">
+          ID information
+        </div>
+        <div style="height: 600px;" id="financial_information">
+          Financial Information
+        </div>
+        <div style="height: 600px;" id="source_of_wealth">
+          Source of Wealth
+        </div>
+        <div style="height: 600px;" id="suitability">
+          Suitability
+        </div>
+        <div style="height: 200px;"></div>
+      </section>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </ng-container>
