--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,8 +1,9 @@
 <div class="sidebar">
   <ul class="nav-links" id="nav-links">
-    <li *ngFor="let item of menuSidebar" #itemEl routerLinkActive="active">
+    <li *ngFor="let item of menuSidebar" #itemEl
+      [ngClass]="{ 'active': isCurrentSelection(item, currentSection), 'showMenu': showSubMenu(item, currentSection) }">
       <div *ngIf="item.sub_menu.length == 0" class="dropdown-title">
-        <a [routerLink]="[item.link]">
+        <a (click)="scrollTo(item.id)">
           <i class="material-icons">{{item.icon}}</i>
           <span class="link_name">{{item.link_name}}</span>
         </a>
@@ -16,8 +17,8 @@
       </div>
       <ul class="sub-menu" [class.blank]="item.sub_menu.length == 0">
         <li><a class="link_name">{{item.link_name}}</a></li>
-        <li *ngFor="let item_sub of item.sub_menu" routerLinkActive="active">
-          <a [routerLink]="[item_sub.link]">{{item_sub.link_name}}</a>
+        <li *ngFor="let item_sub of item.sub_menu" [ngClass]="{ 'active': currentSection === item_sub.id }">
+          <a (click)="scrollTo(item_sub.id)">{{item_sub.link_name}}</a>
         </li>
       </ul>
     </li>
